syntax = "proto3";
package core;

option go_package = "/core";

service remote {
  rpc syncRoute(syncRouteReq) returns (syncRouteRes) {}
}

message syncRouteReq {
  bytes data = 1;
}

message syncRouteRes {
  bool result = 1;
}